IDE: regenerated translations and updated Russian translation

--- a/languages/lazaruside.cs.po
+++ b/languages/lazaruside.cs.po
@@ -4317,6 +4317,18 @@ msgstr "Předpona řetězců na novém řádku"
 msgid "String ''"
 msgstr "Řetězec ''"
 
+#: lazarusidestrconsts.dlgstringcontalignalignsecondlineafterfirst
+msgid "Align second line (after first break) with the position of the lowest matching group in the pattern, or the match position of the pattern itself."
+msgstr ""
+
+#: lazarusidestrconsts.dlgstringcontalignalignsecondlineregex
+msgid "Align second line (reg-ex):"
+msgstr ""
+
+#: lazarusidestrconsts.dlgstringcontalignmaxindentforsecondlineifb
+msgid "Max indent for second line if based on reg-ex:"
+msgstr ""
+
 #: lazarusidestrconsts.dlgstringenableautocontinue
 msgid "Extend strings on linebreak"
 msgstr "Rozšířit řetězce na zalomení"
@@ -20266,15 +20278,15 @@ msgid "Copy"
 msgstr "Kopírovat"
 
 #: lazarusidestrconsts.srkmeccopyadd
-msgid "Copy (Add to Clipboard)"
+msgid "Copy to clipboard (append)"
 msgstr ""
 
 #: lazarusidestrconsts.srkmeccopyaddcurrentline
-msgid "Copy current line (Add to Clipboard)"
+msgid "Copy current line to clipboard (append)"
 msgstr ""
 
 #: lazarusidestrconsts.srkmeccopycurrentline
-msgid "Copy current line"
+msgid "Copy current line to clipboard"
 msgstr ""
 
 #: lazarusidestrconsts.srkmeccopyeditornewwindow
@@ -20295,15 +20307,15 @@ msgid "Cut"
 msgstr "Vyjmout"
 
 #: lazarusidestrconsts.srkmeccutadd
-msgid "Cut (Add to Clipboard)"
+msgid "Cut to clipboard (append)"
 msgstr ""
 
 #: lazarusidestrconsts.srkmeccutaddcurrentline
-msgid "Cut current line (Add to Clipboard)"
+msgid "Cut current line to clipboard (append)"
 msgstr ""
 
 #: lazarusidestrconsts.srkmeccutcurrentline
-msgid "Cut current line"
+msgid "Cut current line to clipboard"
 msgstr ""
 
 #: lazarusidestrconsts.srkmecdeletebol
