--- a/languages/lazaruside.fi.po
+++ b/languages/lazaruside.fi.po
@@ -4273,6 +4273,18 @@ msgstr "Lisää merkkijonoon etuliite uudella rivillä"
 msgid "String ''"
 msgstr "Merkkijono ''"
 
+#: lazarusidestrconsts.dlgstringcontalignalignsecondlineafterfirst
+msgid "Align second line (after first break) with the position of the lowest matching group in the pattern, or the match position of the pattern itself."
+msgstr ""
+
+#: lazarusidestrconsts.dlgstringcontalignalignsecondlineregex
+msgid "Align second line (reg-ex):"
+msgstr ""
+
+#: lazarusidestrconsts.dlgstringcontalignmaxindentforsecondlineifb
+msgid "Max indent for second line if based on reg-ex:"
+msgstr ""
+
 #: lazarusidestrconsts.dlgstringenableautocontinue
 msgid "Extend strings on linebreak"
 msgstr "Laajenna merkkijonot rivinvaihdossa"
@@ -20076,15 +20088,15 @@ msgid "Copy"
 msgstr "Kopioi"
 
 #: lazarusidestrconsts.srkmeccopyadd
-msgid "Copy (Add to Clipboard)"
+msgid "Copy to clipboard (append)"
 msgstr ""
 
 #: lazarusidestrconsts.srkmeccopyaddcurrentline
-msgid "Copy current line (Add to Clipboard)"
+msgid "Copy current line to clipboard (append)"
 msgstr ""
 
 #: lazarusidestrconsts.srkmeccopycurrentline
-msgid "Copy current line"
+msgid "Copy current line to clipboard"
 msgstr ""
 
 #: lazarusidestrconsts.srkmeccopyeditornewwindow
@@ -20105,15 +20117,15 @@ msgid "Cut"
 msgstr "Leikkaa"
 
 #: lazarusidestrconsts.srkmeccutadd
-msgid "Cut (Add to Clipboard)"
+msgid "Cut to clipboard (append)"
 msgstr ""
 
 #: lazarusidestrconsts.srkmeccutaddcurrentline
-msgid "Cut current line (Add to Clipboard)"
+msgid "Cut current line to clipboard (append)"
 msgstr ""
 
 #: lazarusidestrconsts.srkmeccutcurrentline
-msgid "Cut current line"
+msgid "Cut current line to clipboard"
 msgstr ""
 
 #: lazarusidestrconsts.srkmecdeletebol
