--- a/components/anchordocking/languages/anchordockstr.ru.po
+++ b/components/anchordocking/languages/anchordockstr.ru.po
@@ -1,15 +1,15 @@
 msgid ""
 msgstr ""
-"Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
 "Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
 "Language-Team: \n"
-"MIME-Version: 1.0\n"
-"Content-Transfer-Encoding: 8bit\n"
 "Language: ru\n"
-"X-Generator: Poedit 2.3.1\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.5\n"
 
 #: anchordockstr.adrsafreesideofasplittermustnotbeanchorednodetypeancho
 #, object-pascal-format
@@ -274,6 +274,10 @@ msgstr "Показывать названия в заголовках"
 #: anchordockstr.adrsshowheaders
 msgid "Show headers"
 msgstr "Показывать заголовки"
+
+#: anchordockstr.adrssplitterresizestyle
+msgid "Splitter resize style:"
+msgstr "Стиль перемещения разделителя:"
 
 #: anchordockstr.adrssplitterthickness
 msgid "Splitter thickness"
