ProjectGroups: regenerated translations and updated Russian translation

--- a/components/projectgroups/languages/projectgroupstrconst.ru.po
+++ b/components/projectgroups/languages/projectgroupstrconst.ru.po
@@ -1,15 +1,15 @@
 msgid ""
 msgstr ""
-"Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
 "Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
 "Language-Team: \n"
-"MIME-Version: 1.0\n"
-"Content-Transfer-Encoding: 8bit\n"
 "Language: ru\n"
-"X-Generator: Poedit 2.2.4\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.5\n"
 
 #: projectgroupstrconst.lisabort
 msgid "Abort"
@@ -423,6 +423,10 @@ msgstr "Компилировать с очисткой"
 msgctxt "projectgroupstrconst.listargetcompilecleancaption"
 msgid "Compile clean"
 msgstr "Компилировать с очисткой"
+
+#: projectgroupstrconst.listargetcompilecleanfromhere
+msgid "Compile clean from here"
+msgstr "Компилировать отсюда с очисткой"
 
 #: projectgroupstrconst.listargetcompilecleanhint
 msgid "Compile selected target clean"
