--- a/components/synedit/languages/syneditstrconst.ru.po
+++ b/components/synedit/languages/syneditstrconst.ru.po
@@ -1,15 +1,15 @@
 msgid ""
 msgstr ""
-"Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
 "Project-Id-Version: lazaruside\n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: 2025-03-12 16:29+0300\n"
+"Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
+"Language-Team: \n"
+"Language: ru\n"
+"MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: \n"
-"PO-Revision-Date: 2024-01-25 02:26+0300\n"
-"Language-Team: \n"
-"MIME-Version: 1.0\n"
-"Language: ru\n"
-"X-Generator: Poedit 2.4.3\n"
+"X-Generator: Poedit 3.5\n"
 
 #: syneditstrconst.scannotpause
 msgid "Can only pause when recording"
@@ -105,19 +105,19 @@ msgstr "Тип данных"
 
 #: syneditstrconst.syns_attrdeclarationtype
 msgid "Declaration block type"
-msgstr ""
+msgstr "Тип в блоке объявлений"
 
 #: syneditstrconst.syns_attrdeclarationtypename
 msgid "Declaration block (Type) name"
-msgstr ""
+msgstr "Имя блока объявлений (Type)"
 
 #: syneditstrconst.syns_attrdeclarationvalue
 msgid "Declaration block value"
-msgstr ""
+msgstr "Значение в блоке объявлений"
 
 #: syneditstrconst.syns_attrdeclarationvarconstname
-msgid "Declaration block (Var,Conts) name"
-msgstr ""
+msgid "Declaration block (Var, Const) name"
+msgstr "Имя блока объявлений (Var, Const)"
 
 #: syneditstrconst.syns_attrdefaultpackage
 msgid "Default packages"
@@ -189,7 +189,7 @@ msgstr "Функция"
 
 #: syneditstrconst.syns_attrgotolabel
 msgid "Goto Label"
-msgstr ""
+msgstr "Метка Goto"
 
 #: syneditstrconst.syns_attrhexadecimal
 msgid "Hexadecimal"
@@ -345,23 +345,23 @@ msgstr "Предыдущее значение"
 
 #: syneditstrconst.syns_attrprocedureheadername
 msgid "Procedure header name"
-msgstr "Имя процедуры в заголовке"
+msgstr "Имя в заголовке процедуры"
 
 #: syneditstrconst.syns_attrprocedureheaderparam
 msgid "Procedure header param name"
-msgstr ""
+msgstr "Имя параметра в заголовке процедуры"
 
 #: syneditstrconst.syns_attrprocedureheaderresult
 msgid "Procedure header result"
-msgstr ""
+msgstr "Результат в заголовке процедуры"
 
 #: syneditstrconst.syns_attrprocedureheadertype
 msgid "Procedure header type"
-msgstr ""
+msgstr "Тип в заголовке процедуры"
 
 #: syneditstrconst.syns_attrprocedureheadervalue
 msgid "Procedure header value"
-msgstr ""
+msgstr "Значение в заголовке процедуры"
 
 #: syneditstrconst.syns_attrprocessinginstr
 msgid "Processing Instruction"
@@ -369,7 +369,7 @@ msgstr "Инструкция обработки"
 
 #: syneditstrconst.syns_attrpropertyname
 msgid "Property name"
-msgstr ""
+msgstr "Имя свойства"
 
 #: syneditstrconst.syns_attrqualifier
 msgid "Qualifier"
@@ -449,7 +449,7 @@ msgstr "Строка"
 
 #: syneditstrconst.syns_attrstructmember
 msgid "Structure member"
-msgstr ""
+msgstr "Элемент структурного типа"
 
 #: syneditstrconst.syns_attrsymbol
 msgid "Symbol"
