--- a/languages/lazaruside.ru.po
+++ b/languages/lazaruside.ru.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lazaruside\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2025-03-07 21:40+0300\n"
+"PO-Revision-Date: 2025-03-12 17:46+0300\n"
 "Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
 "Language-Team: \n"
 "Language: ru\n"
@@ -3512,17 +3512,49 @@ msgstr ""
 msgid "Hints for component palette"
 msgstr "Подсказки палитры компонентов"
 
+#: lazarusidestrconsts.dlgpascaselabelforotherwise
+msgid "Color otherwise/else as case-label"
+msgstr "Подсвечивать Otherwise/Else так же, как метку Case"
+
+#: lazarusidestrconsts.dlgpasdeclaredtypeattrmode
+msgid "Extend of type-highlight in declarations"
+msgstr "Расширение подсветки типа в объявлениях"
+
+#: lazarusidestrconsts.dlgpasdeclaredtypeattrmodeident
+msgid "Identifier only"
+msgstr "Только идентификатор"
+
+#: lazarusidestrconsts.dlgpasdeclaredtypeattrmodekeyandsym
+msgid "All, including symbols"
+msgstr "Всё, включая символы"
+
+#: lazarusidestrconsts.dlgpasdeclaredtypeattrmodekeywords
+msgid "Identifier and built-in keywords"
+msgstr "Идентификатор и встроенные ключевые слова"
+
+#: lazarusidestrconsts.dlgpasdeclaredtypeattrmodenames
+msgid "Identifier and built-in types/values"
+msgstr "Идентификатор и встроенные типы/значения"
+
+#: lazarusidestrconsts.dlgpasdeclaredtypevaluemode
+msgid "Extend of initial-value-highlight in declarations"
+msgstr "Расширение подсветки первоначального значения в объявлениях"
+
+#: lazarusidestrconsts.dlgpasdeclaredtypevaluemodeliteral
+msgid "Include literals (Number, String) in initial-value-highlight in declarations"
+msgstr "Включать литералы (числа, строки) в подсветку первоначальных значений в объявлениях"
+
 #: lazarusidestrconsts.dlgpasext
 msgid "Default Pascal extension"
 msgstr "Стандартное расширение Паскаля"
 
-#: lazarusidestrconsts.dlgpasextkeywords
-msgid "Highlight control statements as keywords"
-msgstr "Подсвечивать операторы управления как ключевые слова"
+#: lazarusidestrconsts.dlgpasexthighlightgroup
+msgid "Extended Pascal Highlight Options"
+msgstr "Расширенные параметры подсветки Паскаля"
 
-#: lazarusidestrconsts.dlgpasextkeywordsgroup
-msgid "Extended Pascal Keyword Options"
-msgstr "Расширенные параметры ключевых слов Паскаля"
+#: lazarusidestrconsts.dlgpasextkeywords
+msgid "Highlight flow control statements (break, continue, exit) as keywords"
+msgstr "Подсвечивать операторы управления (break, continue, exit) так же, как ключевые слова"
 
 #: lazarusidestrconsts.dlgpaskeywordsmarkup
 msgid "Markup (on caret)"
@@ -3541,8 +3573,8 @@ msgid "Pass options to linker with \"-k\", delimiter is space"
 msgstr "Передавать параметры компоновщику с префиксом \"-k\" (разделитель - пробел)"
 
 #: lazarusidestrconsts.dlgpasstringkeywords
-msgid "Highlight \"String\" keyword(s)"
-msgstr "Подсветка ключевого слова String"
+msgid "Highlight \"String\" types as keyword"
+msgstr "Подсвечивать типы \"String\" так же, как ключевые слова"
 
 #: lazarusidestrconsts.dlgpasstringkeywordsoptdefault
 msgctxt "lazarusidestrconsts.dlgpasstringkeywordsoptdefault"
@@ -4213,6 +4245,14 @@ msgstr "Пробел"
 #: lazarusidestrconsts.dlgspbhints
 msgid "Hints for main speed buttons (open, save, ...)"
 msgstr "Подсказки командных кнопок (открыть, сохранить и т.д.)"
+
+#: lazarusidestrconsts.dlgsrcedcolorlabelinthesourceareonlyco
+msgid "Label in the source are only colored if the colon \":\" is placed immediately after the label."
+msgstr "Цвет метки в исходном коде меняется только при наличии двоеточия \":\" сразу после неё."
+
+#: lazarusidestrconsts.dlgsrcedcolormembercolorisappliedtoany
+msgid "\"Member\" color is applied to any identifier behind a dot \".\"."
+msgstr "Цвет элемента применяется к любому идентификатору после точки \".\"."
 
 #: lazarusidestrconsts.dlgsrorigin
 msgid "Origin"
