--- a/languages/lazaruside.it.po
+++ b/languages/lazaruside.it.po
@@ -3667,11 +3667,11 @@ msgid "All, including symbols"
 msgstr ""
 
 #: lazarusidestrconsts.dlgpasdeclaredtypeattrmodekeywords
-msgid "Identifier and built-in keywords"
+msgid "Identifier, built-in and keywords"
 msgstr ""
 
 #: lazarusidestrconsts.dlgpasdeclaredtypeattrmodenames
-msgid "Identifier and built-in types/values"
+msgid "Identifier and built-in (types/values)"
 msgstr ""
 
 #: lazarusidestrconsts.dlgpasdeclaredtypevaluemode
