IDE: regenerated translations and updated Russian translation

--- a/languages/lazaruside.ru.po
+++ b/languages/lazaruside.ru.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lazaruside\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2025-03-12 18:27+0300\n"
+"PO-Revision-Date: 2025-03-20 18:56+0300\n"
 "Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
 "Language-Team: \n"
 "Language: ru\n"
@@ -3405,6 +3405,10 @@ msgstr "Уровни оптимизации"
 msgid "Word-wrap"
 msgstr "Перенос слов"
 
+#: lazarusidestrconsts.dlgoptwordwrapallhl
+msgid "Select all"
+msgstr "Выбрать все"
+
 #: lazarusidestrconsts.dlgoptwordwrapcheckfixedlength
 msgid "Wrap at fixed column"
 msgstr "Переносить на фиксированном столбце"
@@ -3453,6 +3457,10 @@ msgstr "Максимальная длина строки"
 #: lazarusidestrconsts.dlgoptwordwrapminimumlinelength
 msgid "Minimum line length"
 msgstr "Минимальная длина строки"
+
+#: lazarusidestrconsts.dlgoptwordwrapnonehl
+msgid "Clear selection"
+msgstr "Снять выбор"
 
 #: lazarusidestrconsts.dlgoptwordwrapsectioncolumn
 msgid "Wrap column settings"
