--- a/components/ideintf/languages/objinspstrconsts.ru.po
+++ b/components/ideintf/languages/objinspstrconsts.ru.po
@@ -2,14 +2,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2024-10-01 17:46+0300\n"
+"PO-Revision-Date: 2025-04-02 02:35+0300\n"
 "Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
 "Language-Team: \n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.3.1\n"
+"X-Generator: Poedit 3.5\n"
 
 #: objinspstrconsts.cactionlisteditorallcategory
 msgid "(All)"
@@ -609,6 +609,10 @@ msgstr "События"
 #: objinspstrconsts.oisfavorites
 msgid "Favorites"
 msgstr "Избранное"
+
+#: objinspstrconsts.oisfilterxml
+msgid "XML files"
+msgstr "Файлы XML"
 
 #: objinspstrconsts.oisfinddeclaration
 msgid "Jump to declaration"
